# cariad_work_package6

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
data/: data.json
inc/: cariad.h  ego.h  obstacle.h  sensor.h
src/: cariad.cpp  main.cpp
tests/: test_cariad.cpp
